objects/DaScoopComposer__Tracked_Message__c.object
<CustomObject>
    <fields>
        <fullName>DaScoopComposer__Date_Sent__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>is the date/time on which the email was sent.</inlineHelpText>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Email_Message_Id__c</fullName>
        <description>The message id of this email on the sending user&apos;s email service. This field is used to create a link to the email message in the browser.</description>
        <inlineHelpText>The message id of this email on the sending user&apos;s email service (according ti the rfc822 header field &quot;message-id&quot;). This field is used to create a link to the email message in the browser.</inlineHelpText>
        <label>Email Message Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Email_Service__c</fullName>
        <defaultValue>&quot;gmail&quot;</defaultValue>
        <description>Name of the Email Service from which this message was sent.</description>
        <inlineHelpText>Name of the Email Service from which this message was sent.</inlineHelpText>
        <label>Email Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Gmail_Id__c</fullName>
        <description>The Gmail Thread Id used to generate a link back to the original message in Gmail.</description>
        <inlineHelpText>Only the sending user can view emails with this link when logged into the sending email account.</inlineHelpText>
        <label>Gmail Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Main_Recipient_Email__c</fullName>
        <inlineHelpText>is the email address of the recipient. If the email was sent to multiple recipients this field is blank.</inlineHelpText>
        <label>Main Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Message_Id__c</fullName>
        <inlineHelpText>is the time stamp ID of the tracked message.</inlineHelpText>
        <label>Message Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Message__c</fullName>
        <inlineHelpText>is the plain text version of the email body. This email has also be appended to the activity history of all the recipients (leads and contacts).</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Reply_Recorded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>indicates whether or not at least one reply to the tracked message was recorded</inlineHelpText>
        <label>Reply Recorded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Sender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indicates the user who sent the email. This user is identified by trying to match a user&apos;s email address with the the email sender&apos;s email address (which sometimes can lead to ambiguity).</inlineHelpText>
        <label>Sender</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tracked_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Template_Folder__c</fullName>
        <inlineHelpText>is the name of the folder of the template that was used sending this tracked message. If no template was used, this field is blank.</inlineHelpText>
        <label>Template Folder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Template_Id__c</fullName>
        <inlineHelpText>is the ID of the template that was used sending this tracked message. If no template was used, this field is blank.</inlineHelpText>
        <label>Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Template_Used__c</fullName>
        <formula>IF(OR(ISNULL(DaScoopComposer__Template_Id__c),DaScoopComposer__Template_Id__c  = &quot;&quot;),
&quot;&quot;,
HYPERLINK(&quot;/&quot; &amp; DaScoopComposer__Template_Id__c, DaScoopComposer__Template_Folder__c &amp; &quot;/&quot; &amp; DaScoopComposer__Template__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>points to the template that was used when this email was sent. If no template was used this field is blank.</inlineHelpText>
        <label>Template Used</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Template__c</fullName>
        <inlineHelpText>is the name of the template that was used sending this tracked message. If no template was used, this field is blank.</inlineHelpText>
        <label>Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Times_Opened__c</fullName>
        <inlineHelpText>indicates how many times the tracked message has been opened in total by any of the recipients.</inlineHelpText>
        <label>Times Opened</label>
        <summaryFilterItems>
            <field>DaScoopComposer__Tracked_Message_Event__c.DaScoopComposer__Type__c</field>
            <operation>equals</operation>
            <value>Email Opened</value>
        </summaryFilterItems>
        <summaryForeignKey>DaScoopComposer__Tracked_Message_Event__c.DaScoopComposer__Tracked_Message__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__uid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>indicates the unique identifier of this tracked message record.</inlineHelpText>
        <label>UID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Tracked Message</label>
    <listViews>
        <fullName>DaScoopComposer__All</fullName>
        <columns>NAME</columns>
        <columns>DaScoopComposer__Sender__c</columns>
        <columns>DaScoopComposer__Main_Recipient_Email__c</columns>
        <columns>DaScoopComposer__Date_Sent__c</columns>
        <columns>DaScoopComposer__Times_Opened__c</columns>
        <columns>DaScoopComposer__Template_Used__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Tracked Messages</label>
    </listViews>
    <listViews>
        <fullName>Nolan_Daigle_Tracked_Message</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracked Messages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>